# num-cell-py

./: LICENSE  README.md  main.py  pyproject.toml
cell_counter/: __init__.py  analisis.py  data.py  preprocesar.py  segmentacion.py
