[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cell_counter"
version = "0.1.0"
description = "Librería para conteo y segmentación de células"
dependencies = [
    "opencv-python",
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools]
packages = ["cell_counter"]